# bazel-cpp-template

./: .bazelrc  MODULE.bazel  README.md  setup.py
.github/workflows/: docs.yml  myapp.yml  pymyapp.yml
docs/: BUILD.bazel
myapp/: BUILD.bazel  main.cpp
myapp/util/: BUILD.bazel  calculator.cpp  calculator.h
pymyapp/: BUILD.bazel  __init__.py  __main__.py  _stubgen.py  interrupt.cpp  interrupt.h  pymyapp.cpp
pymyapp/tests/: BUILD.bazel  TestCalculator.py
script/: valgrind.sh  visualize_deps.sh
tools/: BUILD.bazel  generate_version_header.bat  generate_version_header.sh  make_var_substitution.bzl  pytest.bzl  requirements.txt  rules_cc.bzl
