load("@doxygen//:doxygen.bzl", "doxygen")
load("//tools:rules_cc.bzl", "MYAPP_NAME", "MYAPP_VERSION")

doxygen(
    name = "docs",
    srcs = [
        "//:README.md",
        "//myapp:all_srcs",
    ],
    aliases = ["\"licence=@par Licence:^^\""],
    project_brief = "MyApp is a simple application",
    project_name = MYAPP_NAME,
    project_number = MYAPP_VERSION,
    use_mdfile_as_mainpage = "README.md",
)
